src/test/ui/traits/trait-static-method-generic-inference.stderr
error[E0283]: type annotations needed
  --> $DIR/trait-static-method-generic-inference.rs:24:25
   |
LL |         fn new() -> T;
   |         -------------- required by `base::HasNew::new`
...
LL |     let _f: base::Foo = base::HasNew::new();
   |                         ^^^^^^^^^^^^^^^^^ cannot infer type
   |
   = note: cannot satisfy `_: base::HasNew<base::Foo>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
